# generals

./: .gitignore  Cargo.toml  config.toml  deploy.sh  start_client.sh
src/: lib.rs
src/client/: button.rs  game.rs  mod.rs  movement.rs  rendering.rs  text_input.rs  ui.rs  websocket.rs
src/server/: config.rs  generator.rs  main.rs  map.rs  player.rs  tick.rs
src/shared/: cb_packet.rs  game_state.rs  map.rs  mod.rs  packet.rs  path.rs  player.rs  sb_packet.rs  terrain.rs
www/: index.html
