[package]
name = "generals"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
bincode = "1.3"
parking_lot = { version = "0.12.4", features = ["nightly", "serde"] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-sockets = "1.0"
uuid = { version = "1.17.0", features = ["serde", "v4", "js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "console",
    "EventTarget",
    "AddEventListenerOptions",
    "MouseEvent",
    "KeyboardEvent",
    "DomRect",
    "CssStyleDeclaration",
    "Window",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3" }
rand = "0.8"




