[package]
name = "generals"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
bincode = "1.3"
parking_lot = { version = "0.12.4", features = ["nightly", "serde"] }
log = "0.4"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
toml = "0.8"
notify = { version = "6.1", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-sockets = "1.0"
uuid = { version = "1.17.0", features = ["serde", "v4", "js"] }
futures = "0.3"
tokio = { version = "1.39", features = ["sync", "macros", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "ErrorEvent",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "console",
    "EventTarget",
    "AddEventListenerOptions",
    "MouseEvent",
    "KeyboardEvent",
    "DomRect",
    "CssStyleDeclaration",
    "Window",
    "TextMetrics",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3" }
toml = "0.8"
notify = "6.1"




